--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,12 @@
 asgiref==3.5.2
+certifi==2022.9.14
+charset-normalizer==2.1.1
 Django==4.0.6
+django-rosetta==0.9.8
+idna==3.4
+polib==1.1.1
 psycopg2-binary==2.9.3
+requests==2.28.1
 sqlparse==0.4.2
 tzdata==2022.1
+urllib3==1.26.12
